--- a/david_capstone_folder/david_test.ipynb
+++ b/david_capstone_folder/david_test.ipynb
@@ -89,222 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>serial_number</th>\n",
-       "      <th>model</th>\n",
-       "      <th>capacity_bytes</th>\n",
-       "      <th>max(failure)</th>\n",
-       "      <th>max(smart_9_raw)</th>\n",
-       "      <th>max(smart_5_raw)</th>\n",
-       "      <th>max(smart_187_raw)</th>\n",
-       "      <th>max(smart_188_raw)</th>\n",
-       "      <th>max(smart_197_raw)</th>\n",
-       "      <th>max(smart_198_raw)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PL1311LAG1SJAA</td>\n",
-       "      <td>Hitachi HDS5C4040ALE630</td>\n",
-       "      <td>4000787030016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>43819.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Z305KB36</td>\n",
-       "      <td>ST4000DM000</td>\n",
-       "      <td>4000787030016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>31045.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MJ0351YNG9MZXA</td>\n",
-       "      <td>Hitachi HDS5C3030ALA630</td>\n",
-       "      <td>3000592982016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>41668.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ZA11NHSN</td>\n",
-       "      <td>ST8000DM002</td>\n",
-       "      <td>8001563222016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26284.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MJ1311YNG2ZSEA</td>\n",
-       "      <td>Hitachi HDS5C3030ALA630</td>\n",
-       "      <td>3000592982016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>47994.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Z305D5VF</td>\n",
-       "      <td>ST4000DM000</td>\n",
-       "      <td>4000787030016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>31883.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Z3015L2E</td>\n",
-       "      <td>ST4000DM000</td>\n",
-       "      <td>4000787030016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36768.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>PL1331LAHDYJYH</td>\n",
-       "      <td>HGST HMS5C4040BLE640</td>\n",
-       "      <td>4000787030016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30144.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Z304LAHP</td>\n",
-       "      <td>ST4000DM000</td>\n",
-       "      <td>4000787030016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33885.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Z302B0GK</td>\n",
-       "      <td>ST4000DM000</td>\n",
-       "      <td>4000787030016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36443.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    serial_number                    model  capacity_bytes  max(failure)  \\\n",
-       "0  PL1311LAG1SJAA  Hitachi HDS5C4040ALE630   4000787030016             0   \n",
-       "1        Z305KB36              ST4000DM000   4000787030016             0   \n",
-       "2  MJ0351YNG9MZXA  Hitachi HDS5C3030ALA630   3000592982016             0   \n",
-       "3        ZA11NHSN              ST8000DM002   8001563222016             0   \n",
-       "4  MJ1311YNG2ZSEA  Hitachi HDS5C3030ALA630   3000592982016             0   \n",
-       "5        Z305D5VF              ST4000DM000   4000787030016             0   \n",
-       "6        Z3015L2E              ST4000DM000   4000787030016             0   \n",
-       "7  PL1331LAHDYJYH     HGST HMS5C4040BLE640   4000787030016             0   \n",
-       "8        Z304LAHP              ST4000DM000   4000787030016             0   \n",
-       "9        Z302B0GK              ST4000DM000   4000787030016             0   \n",
-       "\n",
-       "   max(smart_9_raw)  max(smart_5_raw)  max(smart_187_raw)  max(smart_188_raw)  \\\n",
-       "0           43819.0               0.0                 NaN                 NaN   \n",
-       "1           31045.0               0.0                 0.0                 0.0   \n",
-       "2           41668.0               0.0                 NaN                 NaN   \n",
-       "3           26284.0               0.0                 0.0                 0.0   \n",
-       "4           47994.0               0.0                 NaN                 NaN   \n",
-       "5           31883.0               0.0                 0.0                 0.0   \n",
-       "6           36768.0               0.0                 0.0                 0.0   \n",
-       "7           30144.0               0.0                 NaN                 NaN   \n",
-       "8           33885.0               0.0                 0.0                 0.0   \n",
-       "9           36443.0               0.0                 0.0                 0.0   \n",
-       "\n",
-       "   max(smart_197_raw)  max(smart_198_raw)  \n",
-       "0                 0.0                 0.0  \n",
-       "1                 0.0                 0.0  \n",
-       "2                 0.0                 0.0  \n",
-       "3                 0.0                 0.0  \n",
-       "4                 0.0                 0.0  \n",
-       "5                 0.0                 0.0  \n",
-       "6                 0.0                 0.0  \n",
-       "7                 0.0                 0.0  \n",
-       "8                 0.0                 0.0  \n",
-       "9                 0.0                 0.0  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-b666bf274d0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
-    "df.head(10)"
+    "df.columns"
    ]
   },
   {
