--- a/david_capstone_folder/david_round_2.ipynb
+++ b/david_capstone_folder/david_round_2.ipynb
@@ -545,10 +545,17 @@
     {
      "data": {
       "text/plain": [
-       "Index(['serial_number', 'manufacturer', 'model', 'capacity_terabytes',\n",
-       "       'failure', 'drive_age_in_years', 'reallocated_sectors_count',\n",
+       "Index(['serial_number', 'model', 'capacity_terabytes', 'max(capacity_bytes)',\n",
+       "       'failure', 'max(smart_3_raw)', 'reallocated_sectors_count',\n",
+       "       'drive_age_in_years', 'max(smart_10_raw)', 'max(smart_11_raw)',\n",
+       "       'max(smart_22_raw)', 'max(smart_183_raw)', 'max(smart_184_raw)',\n",
        "       'reported_uncorrectable_errors', 'command_timeout',\n",
-       "       'current_pending_sector_count', 'uncorrectable_sector_count'],\n",
+       "       'max(smart_189_raw)', 'max(smart_191_raw)', 'max(smart_193_raw)',\n",
+       "       'max(smart_194_raw)', 'max(smart_195_raw)', 'max(smart_196_raw)',\n",
+       "       'current_pending_sector_count', 'uncorrectable_sector_count',\n",
+       "       'max(smart_199_raw)', 'max(smart_200_raw)', 'max(smart_220_raw)',\n",
+       "       'max(smart_222_raw)', 'max(smart_223_raw)', 'max(smart_224_raw)',\n",
+       "       'max(smart_225_raw)', 'manufacturer'],\n",
        "      dtype='object')"
       ]
      },
