--- a/david_capstone_folder/david_test.ipynb
+++ b/david_capstone_folder/david_test.ipynb
@@ -35,6 +35,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle_in = open(\"dict.pickle\",\"rb\")\n",
+    "example_dict = pickle.load(pickle_in)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: '6', 2: '2', 3: 'f'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable_name = open(\"cucumber.pickle\",\"rb\")\n",
+    "cucumber = pickle.load(variable_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.99      0.98     63963\n",
+      "           1       0.75      0.54      0.62      3189\n",
+      "\n",
+      "    accuracy                           0.97     67152\n",
+      "   macro avg       0.86      0.76      0.80     67152\n",
+      "weighted avg       0.97      0.97      0.97     67152\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cucumber)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
