--- a/david_capstone_folder/copy_main.ipynb
+++ b/david_capstone_folder/copy_main.ipynb
@@ -3267,7 +3267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create new dfs with hard drives that have failed, and hard drives that have not failed \n",
+    "# create new dfs for early fails, non early fails, and non fails\n",
     "df_early_fails = df [df.early_failure == 1]\n",
     "df_not_early_fails = df [df.early_failure == 0]\n",
     "df_no_fails = df [df.failure == 0]"
