--- a/david_capstone_folder/copy_main.ipynb
+++ b/david_capstone_folder/copy_main.ipynb
@@ -3263,6 +3263,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pretty charts here Misty"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 201,
    "metadata": {},
    "outputs": [],
