added coment for old_or_fail

--- a/hard_drive_pipeline.ipynb
+++ b/hard_drive_pipeline.ipynb
@@ -2008,7 +2008,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How many of the hard drives are identified as early failures?"
+    "#### How many of the hard drives are identified as early failures?"
    ]
   },
   {
@@ -2057,7 +2057,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Only 4.7% of hard drives are identified as early failures"
+    "> Only 4.7% of hard drives are identified as early failures after the removal of young non-failing drives."
    ]
   },
   {
