conclusions on models

--- a/hard_drive_pipeline.ipynb
+++ b/hard_drive_pipeline.ipynb
@@ -4025,7 +4025,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This classifier maintained it's accuracy of 0.93 and recall rate for early failures of 0.76. This concludes that our model did not"
+    "> This classifier maintained it's accuracy of 0.93 and recall rate for early failures of 0.76. This concludes that our model did not overfit the data. "
    ]
   },
   {
@@ -4113,6 +4113,13 @@
     " \n",
     "The data presented is only on hard drives that were used by Backblaze, and may be misleading if generalized outside of that context. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
