--- a/david_capstone_folder/david_test.ipynb
+++ b/david_capstone_folder/david_test.ipynb
@@ -36,6 +36,259 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('2019-09-30.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>serial_number</th>\n",
+       "      <th>model</th>\n",
+       "      <th>capacity_bytes</th>\n",
+       "      <th>failure</th>\n",
+       "      <th>smart_1_normalized</th>\n",
+       "      <th>smart_1_raw</th>\n",
+       "      <th>smart_2_normalized</th>\n",
+       "      <th>smart_2_raw</th>\n",
+       "      <th>smart_3_normalized</th>\n",
+       "      <th>...</th>\n",
+       "      <th>smart_250_normalized</th>\n",
+       "      <th>smart_250_raw</th>\n",
+       "      <th>smart_251_normalized</th>\n",
+       "      <th>smart_251_raw</th>\n",
+       "      <th>smart_252_normalized</th>\n",
+       "      <th>smart_252_raw</th>\n",
+       "      <th>smart_254_normalized</th>\n",
+       "      <th>smart_254_raw</th>\n",
+       "      <th>smart_255_normalized</th>\n",
+       "      <th>smart_255_raw</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-09-30</td>\n",
+       "      <td>Z305B2QN</td>\n",
+       "      <td>ST4000DM000</td>\n",
+       "      <td>4000787030016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>88847920.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-09-30</td>\n",
+       "      <td>ZJV0XJQ4</td>\n",
+       "      <td>ST12000NM0007</td>\n",
+       "      <td>12000138625024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>53191496.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-09-30</td>\n",
+       "      <td>ZJV0XJQ3</td>\n",
+       "      <td>ST12000NM0007</td>\n",
+       "      <td>12000138625024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>107432696.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-09-30</td>\n",
+       "      <td>ZJV0XJQ0</td>\n",
+       "      <td>ST12000NM0007</td>\n",
+       "      <td>12000138625024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>198398656.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-09-30</td>\n",
+       "      <td>PL1331LAHG1S4H</td>\n",
+       "      <td>HGST HMS5C4040ALE640</td>\n",
+       "      <td>4000787030016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 129 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date   serial_number                 model  capacity_bytes  failure  \\\n",
+       "0  2019-09-30        Z305B2QN           ST4000DM000   4000787030016        0   \n",
+       "1  2019-09-30        ZJV0XJQ4         ST12000NM0007  12000138625024        0   \n",
+       "2  2019-09-30        ZJV0XJQ3         ST12000NM0007  12000138625024        0   \n",
+       "3  2019-09-30        ZJV0XJQ0         ST12000NM0007  12000138625024        0   \n",
+       "4  2019-09-30  PL1331LAHG1S4H  HGST HMS5C4040ALE640   4000787030016        0   \n",
+       "\n",
+       "   smart_1_normalized  smart_1_raw  smart_2_normalized  smart_2_raw  \\\n",
+       "0               115.0   88847920.0                 NaN          NaN   \n",
+       "1                77.0   53191496.0                 NaN          NaN   \n",
+       "2                80.0  107432696.0                 NaN          NaN   \n",
+       "3                83.0  198398656.0                 NaN          NaN   \n",
+       "4               100.0          0.0               134.0        103.0   \n",
+       "\n",
+       "   smart_3_normalized  ...  smart_250_normalized  smart_250_raw  \\\n",
+       "0                91.0  ...                   NaN            NaN   \n",
+       "1                96.0  ...                   NaN            NaN   \n",
+       "2                99.0  ...                   NaN            NaN   \n",
+       "3                93.0  ...                   NaN            NaN   \n",
+       "4               100.0  ...                   NaN            NaN   \n",
+       "\n",
+       "   smart_251_normalized  smart_251_raw  smart_252_normalized  smart_252_raw  \\\n",
+       "0                   NaN            NaN                   NaN            NaN   \n",
+       "1                   NaN            NaN                   NaN            NaN   \n",
+       "2                   NaN            NaN                   NaN            NaN   \n",
+       "3                   NaN            NaN                   NaN            NaN   \n",
+       "4                   NaN            NaN                   NaN            NaN   \n",
+       "\n",
+       "   smart_254_normalized  smart_254_raw  smart_255_normalized  smart_255_raw  \n",
+       "0                   NaN            NaN                   NaN            NaN  \n",
+       "1                   NaN            NaN                   NaN            NaN  \n",
+       "2                   NaN            NaN                   NaN            NaN  \n",
+       "3                   NaN            NaN                   NaN            NaN  \n",
+       "4                   NaN            NaN                   NaN            NaN  \n",
+       "\n",
+       "[5 rows x 129 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
